# playbot

./: .eslintrc  .gitignore  Procfile  README.md  docker-compose.yml  lint-staged.config.js  package-lock.json  package.json  tsconfig.json
.github/workflows/: ESLint.yml  discord-bot-AutoDeployTrigger-39170f19-fa7e-40ea-8669-82f536689b0f.yml  discord-bot-deploy-dev.yml  fly-backend-prod.yml  fly-discord-bot-prod.yml  playbot-dev-AutoDeployTrigger-17f3e2c7-96db-4df3-97e0-2cacd382ce71.yml  playbot-dev-test-AutoDeployTrigger-fa9b0580-301b-40d5-a60f-ca2978fb53ea.yml  pulumi-deploy-dev.yml  pulumi-deploy-prod.yml  pulumi-preview.yml
api-service/: Cargo.toml
api-service/src/: game.rs  games.rs  main.rs
backend/: Cargo.toml  Dockerfile  dev.fly.toml  prod.fly.toml
backend/settings/: development.yaml  production.yaml
backend/src/: lib.rs  main.rs  settings.rs  startup.rs  telemetry.rs  utils.rs
backend/src/models/: levels.rs  mod.rs  reactions.rs
backend/src/routes/: health.rs  mod.rs
backend/src/routes/api/: mod.rs
backend/src/routes/api/v1/: game.rs  games.rs  leaderboard.rs  mod.rs  reactions.rs  user.rs
discord-bot/: .env_example  .eslintrc  .gitignore  .lintstagedrc  Dockerfile  Dockerfile.dev  Dockerfile.prepare  Dockerfile.prod  dev.fly.toml  dump.rdb  fly.toml  newrelic.js  nodemon.json  package-lock.json  package.json  prod.fly.toml  tsconfig.json
discord-bot/src/: bot.ts  (+3 more)
infra/: Pulumi.dev.yaml  Pulumi.prod.yaml  Pulumi.yaml  index.ts  package-lock.json  package.json
src/: bot.ts  config.ts  deploy-commands.ts  index.ts  rollbarConfig.ts
(+114 files in other folders)
